src/test/ui/issues/issue-27008.stderr
error[E0308]: mismatched types
  --> $DIR/issue-27008.rs:4:17
   |
LL |     let b = [0; S];
   |                 ^ expected usize, found struct `S`
   |
   = note: expected type `usize`
              found type `S`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
